# RayTracer

./: .gitignore  CMakeLists.txt  README.md  RayTracer.sln
Projects/: Clock.cpp  Plane.cpp  Projectile.cpp  Scene.cpp  Sphere.cpp
RayTracer/: Canvas.cpp  Canvas.h  Color.cpp  Color.h  Geometry.cpp  Geometry.h  Light.cpp  Light.h  Lighting.cpp  Lighting.h  Main.cpp  Matrix.cpp  Matrix.h  Object.cpp  Object.h  Pattern.cpp  Pattern.h  Point.cpp  Point.h  Projectile.cpp  Ray.cpp  Ray.h  RayTracer.vcxproj  RayTracer.vcxproj.filters  Shape.cpp  Shape.h  Tuple.cpp  Tuple.h  Types.cpp  Types.h  Vector.cpp  Vector.h  World.cpp  World.h
UnitTest/: UnitTest.cpp  UnitTest.vcxproj  UnitTest.vcxproj.filters
UnitTests/: Chapter1.cpp  Chapter10.cpp  Chapter11.cpp  Chapter2.cpp  Chapter3.cpp  Chapter4.cpp  Chapter5.cpp  Chapter6.cpp  Chapter7.cpp  Chapter8.cpp  Chapter9.cpp  Test1.cpp  Test2.cpp  Test3.cpp  Test4.cpp  Test5.cpp  Test6.cpp  UnitTests.cpp  UnitTests.vcxproj  UnitTests.vcxproj.filters  pch.h
